tests/good/print_normal_string.lat
int main() {
	printString("Siemanko!");
	return 0;
}
