tests/bad/arrays/2.lat
int main () {
    int[] a = new int["s"];
    return 0;
}